# folio

./: README.md  pyproject.toml
folio/: folio.py  main.py
