[tool.poetry]
name = "folio"
version = "0.1.0"
description = ""
authors = ["Ganesh Katrapati <neshmailsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
tinydb = "^4.8.2"
pydantic = "^2.9.2"
rich = "^13.9.3"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
folio = "folio.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
